kube_files.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloapp
    env: development
  name: helloapp
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: helloapp
    env: development
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloapp
    env: development
  name: helloapp
spec:
  selector:
    matchLabels:
      app: helloapp
      env: development
  template:
    metadata:
      labels:
        app: helloapp
        env: development
    spec:
      containers:
      - image: txconsole/helloapp
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 10
        name: helloapp
        ports:
        - containerPort: 8080
          name: service-port
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 40
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 200Mi
      imagePullSecrets:
      - name: regcred
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    env: development
    type: ingress
  name: helloapp
spec:
  rules:
  - host: helloapp.lab.app.10.16.202.119.nip.io
    http:
      paths:
      - backend:
          serviceName: helloapp
          servicePort: 8080
        path: /
